Fix some spacing issues…

--- a/css/site.css
+++ b/css/site.css
@@ -134,6 +134,11 @@ h1.header {
     margin-bottom: 0.8em;
 }
 
+.inner-header {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 /* ***********************************  */
 /* ************** Menu ***************  */
 /* ***********************************  */
